src/objects/Incident_Report__c.object
<CustomObject>
    <fields>
        <fullName>Activity_Limitations__c</fullName>
        <inlineHelpText>Indicate if participants&apos; activities are limited due to injuries sustained.</inlineHelpText>
        <label>Activity Limitations</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Adult_Protective_Services_Notified_By__c</fullName>
        <label>Adult Protective Services Notified By</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Allegation_Against_Employee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allegation Against Employee?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CASES_Staff_Involved__c</fullName>
        <inlineHelpText>List any CASES staff who were involved in the incident (as victims, witnesses, provided assistance, etc). If the staffperson was contacted later, list them under &quot;Personnel Contacted&quot; below.</inlineHelpText>
        <label>CASES Staff Involved</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Date_Adult_Protective_Services_Notified__c</fullName>
        <label>Date Adult Protective Services Notified</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Registry_Notified__c</fullName>
        <label>Date Registry Notified</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Defect_at_Incident_Site__c</fullName>
        <inlineHelpText>If an injury was caused due to a defect or dangerous condition at a CASES site, indicate the nature of the defect.</inlineHelpText>
        <label>Defect at Incident Site</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Degree_of_Harm_Caused__c</fullName>
        <inlineHelpText>No harm: no harm
Low harm: minor harm, first aid only
Moderate harm: moderate physical harm
Severe harm: serious physical injury</inlineHelpText>
        <label>Degree of Harm Caused</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moderate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Severe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Harm</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Incident_Category__c</fullName>
        <label>Incident Category</label>
        <picklist>
            <picklistValues>
                <fullName>Threat of bodily harm to self or others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Harassment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weapons possession</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assault</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Victim of assault, harassment or crime</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fight</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Allegation of abuse/neglect by parent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Allegation of abuse/neglect by staff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical emergency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Possession of contraband</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Theft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Behavior that raises concerns for safety</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Incident_Date__c</fullName>
        <label>Incident Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Incident_Description__c</fullName>
        <label>Incident Description</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Incident_Outcome__c</fullName>
        <inlineHelpText>Provide update on the status of participants at the time of report submission.</inlineHelpText>
        <label>Incident Outcome</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Incident_Time__c</fullName>
        <label>Incident Time</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initial_Actions_Taken__c</fullName>
        <inlineHelpText>List any actions taken immediately after the incident occurred or was first reported, in order to treat injuries or minimize risk of future harm.</inlineHelpText>
        <label>Initial Actions Taken</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Measures_Taken_to_Remedy_Defect__c</fullName>
        <inlineHelpText>If an injury was caused due to a defect or condition at a CASES site, then indicate the measures taken to remove the hazard.</inlineHelpText>
        <label>Measures Taken to Remedy Defect</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Medical_Treatment_Provided__c</fullName>
        <inlineHelpText>If participants were injured, list the treatments provided and the name/contact info of the personnel/ institution that provided care.</inlineHelpText>
        <label>Medical Treatment Provided</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Notified_Adult_Protective_Services__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notified Adult Protective Services?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notified_NYC_Child_Abuse_Registry__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notified NYC Child Abuse Registry?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OldId__c</fullName>
        <externalId>true</externalId>
        <label>Old ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Other_Individuals_Involved__c</fullName>
        <inlineHelpText>List other individuals (not clients/CASES staff) who were involved in the incident in any way. Include name, age, type of involvement, contact info, and relationship to clients.</inlineHelpText>
        <label>Other Individuals Involved</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Participants_Injured__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Participants Injured?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Participants_Involved__c</fullName>
        <inlineHelpText>List the CASES clients who were involved in any way (perpetrators, victims, witnesses, provided assistance, etc)</inlineHelpText>
        <label>Participants Involved</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Participants_Projected_Return_to_Program__c</fullName>
        <inlineHelpText>Please indicate the date of the injured participants&apos; projected return to the program.</inlineHelpText>
        <label>Participants Projected Return to Program</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Personnel_Contacted__c</fullName>
        <inlineHelpText>List all emergency services personnel/CASES staff who were contacted or responded to the incident. Include name, title, time called/arrived, and badge number (if applicable).</inlineHelpText>
        <label>Personnel Contacted</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Police_Notified_of_Property_Loss__c</fullName>
        <inlineHelpText>If the police were notified of the alleged lost property, include the complaint number and a description of the response.</inlineHelpText>
        <label>Police Notified of Property Loss?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Property_Losses__c</fullName>
        <inlineHelpText>Indicate all property alleged lost, damaged or stolen. Include the item, description, serial # and value.</inlineHelpText>
        <label>Property Losses</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Property_Lost_Damaged_or_Stolen__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Property Lost, Damaged or Stolen?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Registry_Notified_By__c</fullName>
        <label>Registry Notified By</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Risk_of_Future_Harm__c</fullName>
        <inlineHelpText>Indicate potential for future injury (if a threat was made, etc). 
Low: low risk of complications
Medium: potential for moderate injury
High: risk of life-threatening harm</inlineHelpText>
        <label>Risk of Future Harm</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moderate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Severe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Risk of Harm</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Incident Report</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Incident_Description__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Brief Description</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Incident Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Check_Injury_Box_if_Completing_Fields</fullName>
        <active>true</active>
        <errorConditionFormula>and(not(Participants_Injured__c), 
or(
not(isblank( Medical_Treatment_Provided__c )),
not(isblank( Participants_Projected_Return_to_Program__c )),
not(isblank( Activity_Limitations__c )),
not(isblank( Defect_at_Incident_Site__c )),
not(isblank( Measures_Taken_to_Remedy_Defect__c ))
)
)</errorConditionFormula>
        <errorDisplayField>Participants_Injured__c</errorDisplayField>
        <errorMessage>If filling out the injury report fields, check the Participants Injured checkbox.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_Injury_Box_if_Harm_Caused</fullName>
        <active>true</active>
        <errorConditionFormula>and(
not(ispickval(Degree_of_Harm_Caused__c, &quot;No Harm&quot;)),
not(Participants_Injured__c)
)</errorConditionFormula>
        <errorDisplayField>Participants_Injured__c</errorDisplayField>
        <errorMessage>If you filled out the &quot;Degree of Harm Caused&quot; field, then check the &quot;Participants Injured&quot; box and fill out the Injury section.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_Property_Box_if_Completing_Fields</fullName>
        <active>true</active>
        <errorConditionFormula>and(not(Property_Lost_Damaged_or_Stolen__c), 
or(
not(isblank(  Property_Losses__c  )),
not(isblank(  Police_Notified_of_Property_Loss__c  ))
)
)</errorConditionFormula>
        <errorDisplayField>Property_Lost_Damaged_or_Stolen__c</errorDisplayField>
        <errorMessage>If filling out the property loss report fields, check the Property Lost, Damaged or Stolen checkbox.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Incident_Name_less_than_35_characters</fullName>
        <active>true</active>
        <errorConditionFormula>len(Name) &gt; 35</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Please enter a brief incident description of 35 characters or less.</errorMessage>
    </validationRules>
</CustomObject>